...
  return (
    <FancyPageView style={[styles.container, { pointerEvents: isFormDisabled ? 'none' : 'auto' }]}>
      <FancyFormScrollView fill contentContainerStyle={styles.scrollContent}>
        <ControlledTextInput
          control={form.control}
          name={'nome'}
          label='Nome'
          disabled={isFormDisabled}
        />
        <ControlledBottomSheetSelect
          control={form.control}
          name={'tipo'}
          label='Tipo'
...
