...

  return (
    <View style={styles.container}>
      <ControlledTextInput
        control={form.control}
        name='nome'
        label='Como quer chamar essa escala?'
        inputProps={{
          onBlur: () => onNomeBlur?.(nome || ''),
        }}
        rightContainer={
          isCheckingName ? (
            <ActivityIndicator size='small' color={palette.primary} style={{ marginRight: 10 }} />
...
