...
          {/* PERIODO */}
          {tipo === 'PERIODO' && (
            <View style={styles.secao}>
              <ControlledDateInput
                control={control}
                name='dataInicio'
                label='Data início'
                disabled={isSubmitting}
              />
              <ControlledDateInput
                control={control}
                name='dataFim'
                label='Data fim'
...
